<resources>
    <string name="app_name">LivPol</string>
    <string name="title_activity_data">DataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="state">State</string>
    <string name="ps">PS</string>
    <string name="district">District</string>
    <string name="locality">Locality</string>
    <string name="ac">AC</string>
    <string name="polling_station">Polling Station</string>
    <string name="search_by_epic_number">Search by EPIC number</string>
</resources>
